--- a/cheat_sheet.ipynb
+++ b/cheat_sheet.ipynb
@@ -44,6 +44,19 @@
     "cursor.execute(sql)"
    ]
   },
+    {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "91c10bf0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# IMPORTING TEXT FILE\n",
+    "import psycopg2\n",
+    "from sqlalchemy import create_engine\n",
+    "df = pd.read_csv('file_location\filename.txt', delimiter = "\t")"
+   ]
+  },
   {
    "cell_type": "code",
    "execution_count": 2,
